Spacing fix

--- a/css/main.css
+++ b/css/main.css
@@ -82,7 +82,7 @@ a:active {
   font-family: sans-serif;
   font-weight: bold;
   line-height: 1.2;
-  padding-top: 50px;
+  padding-top: 30px;
 }
 
 .hero_h2 {
@@ -169,6 +169,7 @@ a:active {
   color: #fff;
   font-family: sans-serif;
   font-weight: 300;
+  line-height: 3.5;
   padding: 10px 25px;  /* vertical horizontal */
   margin: 5px;
   border-radius: 30px;
